ports/stm32/err.log
pyb_i2c.c: In function 'pyb_i2c_init_freq':
pyb_i2c.c:387:31: error: 'I2C_DUALADDRESS_DISABLED' undeclared (first use in this function)
     init->DualAddressMode   = I2C_DUALADDRESS_DISABLED;
                               ^
pyb_i2c.c:387:31: note: each undeclared identifier is reported only once for each function it appears in
pyb_i2c.c:388:31: error: 'I2C_GENERALCALL_DISABLED' undeclared (first use in this function)
     init->GeneralCallMode   = I2C_GENERALCALL_DISABLED;
                               ^
pyb_i2c.c: In function 'pyb_i2c_init_helper':
pyb_i2c.c:614:29: error: 'I2C_DUALADDRESS_DISABLED' undeclared (first use in this function)
     init->DualAddressMode = I2C_DUALADDRESS_DISABLED;
                             ^
pyb_i2c.c:615:46: error: 'I2C_GENERALCALL_ENABLED' undeclared (first use in this function)
     init->GeneralCallMode = args[3].u_bool ? I2C_GENERALCALL_ENABLED : I2C_GENERALCALL_DISABLED;
                                              ^
pyb_i2c.c:615:72: error: 'I2C_GENERALCALL_DISABLED' undeclared (first use in this function)
     init->GeneralCallMode = args[3].u_bool ? I2C_GENERALCALL_ENABLED : I2C_GENERALCALL_DISABLED;
                                                                        ^
make: *** [build-STM32F3DISC/pyb_i2c.o] Error 1
